--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "chart.js": "^4.5.0",
     "chatwhole": "file:",
     "cors": "^2.8.5",
+    "csv-express": "^1.2.2",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
