--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.5.0",
     "chatwhole": "file:",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "csv-express": "^1.2.2",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
